--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
-
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
     "daisyui": "^5.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -28,7 +28,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.3",
     "vite": "^6.2.0"
   }
 }
