--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "daisyui": "^5.0.12",
     "framer-motion": "^12.6.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
